--- a/R/Simulated Data Analysis.Rmd
+++ b/R/Simulated Data Analysis.Rmd
@@ -5,6 +5,11 @@ output:
     toc: yes
     toc_float: yes
 ---
+
+# To-Do:
+
+- Write functions for getting kappas to simplify code, move all that to separate .Rmd (perhaps the one called Cohen's Kappas already?)
+
 # Goal
 To show that PLS-DA performs better than PCA at figuring out which variables are most responsible for group separation.  I do this using VIP scores from PLS-DA and correlations with PC1 for PCA followed by a calculation of Cohen's Kappa.  For now, I'm only doing this with two of the data scenarios where the variables either contribute to group separation or don't: the positive control, and the needle-in-a-haystack.
 
@@ -31,8 +36,10 @@ library(tidyverse)
 library(colorspace)
 library(cowplot)
 ```
+
+Create "safe" "partial" version of opls() which returns NULL if it errors and never plots or prints results
+
 ```{r}
-#create "safe" "partial" version of opls() which returns NULL if it errors and never plots or prints results
 safe_opls <- safely(partial(opls, printL = FALSE, plotL = FALSE), otherwise = NULL)
 ```
 
@@ -52,21 +59,56 @@ For each scenario, run PCA and PLS-DA on all datasets.  Record errors, and calcu
 
 ## Null
 
+### Null PCAs
+
 ```{r}
-null.pls.try <-
-  map(null,
-      ~ safe_opls(select(., -group), .$group))
-null.pls.failed <- map_lgl(null.pls.try, 
-                           ~!pluck(., "error") %>%
-                             is.null())
-null.pls <- null.pls.try[!null.pls.failed]
+# map the pca function to all datasets
+null.pcas.try <-
+  null %>% 
+  map(~safe_opls(select(., -group)))
 
-length(null.pls.try) - length(null.pls)
-
-# sample(null.pls, 1)
+# Get just the successful models
+null.pcas <-
+  null.pcas.try %>%
+  map("result") %>% #get only results
+  discard(is.null) #get rid of any with NULL results (and therefore an error)
 ```
 
-75/100 models failed
+Any errors?
+
+```{r}
+length(null.pcas.try) - length(null.pcas)
+```
+
+### Null PLSs
+
+```{r}
+null.pls.try <-
+  null %>% 
+  map(~ safe_opls(select(., -group), .$group)) #map the opls
+
+# get just succesful models
+null.pls <-
+  null.pls.try %>% 
+  map("result") %>% 
+  discard(is.null)
+```
+
+Any errors?
+
+```{r}
+length(null.pls.try) - length(null.pls)
+```
+
+75/100 models failed.  Why?
+
+```{r}
+null.pls.try %>% 
+  map("error") %>%
+  unique()
+```
+
+They all failed because the first predictive component already wasn't significant.
 
 ## Control
 
@@ -78,16 +120,10 @@ control.pcas.try <-
   map(control,
       ~safe_opls(select(., -group)))
 
-# figure out which ones failed and returned NULL
-control.pcas.failed <-
-  control.pcas.try %>% 
-  map("error") %>%
-  map_lgl(~!is.null(.))
-
-# Index by which ones failed to get only the successful models, get just the model
 control.pcas <-
-  control.pcas.try[!control.pcas.failed] %>%
-  map("result")
+  control.pcas.try %>%
+  map("result") %>% 
+  discard(is.null)
 ```
 
 How many errors? 
@@ -98,7 +134,7 @@ length(control.pcas.try) - length(control.pcas)
 #What was the error?
 control.pcas.try %>% 
   map("error") %>% 
-  flatten()
+  unique()
 ```
 
 One failed model due to convergence problems
@@ -110,14 +146,10 @@ control.pls.try <-
   map(control,
       ~ safe_opls(select(., -group), .$group))
 
-control.pls.failed <-
-  map_lgl(control.pls.try,
-          ~!pluck(.,"error") %>%
-            is.null())
-
 control.pls <-
-  control.pls.try[!control.pls.failed] %>% 
-  map(~pluck(., "result"))
+  control.pls.try %>% 
+  map("result") %>% 
+  discard(is.null)
 ```
 
 How many failed models?
@@ -137,14 +169,10 @@ needle.pcas.try <-
   map(needle,
       ~safe_opls(select(., -group)))
 
-needle.pcas.failed <-
-  map_lgl(needle.pcas.try,
-          ~!pluck(., "error") %>% 
-            is.null())
-
 needle.pcas <-
-  needle.pcas.try[!needle.pcas.failed] %>% 
-  map(~pluck(.,"result"))
+  needle.pcas.try %>% 
+  map("result") %>% 
+  discard(is.null)
 ```
 
 Any errors?
@@ -162,14 +190,10 @@ needle.pls.try <-
   map(needle,
       ~ safe_opls(select(., -group), .$group))
 
-needle.pls.failed <-
-  map_lgl(needle.pls.try,
-          ~!pluck(., "error") %>%
-            is.null())
-
 needle.pls <-
-  needle.pls.try[!needle.pls.failed] %>% 
-  map(~pluck(.,"result"))
+  needle.pls.try %>% 
+  map("result") %>% 
+  discard(is.null)
 ```
 
 Any errors?
@@ -182,22 +206,107 @@ zero errors
 
 ## Red Herring (might not use this one)
 
+### Red Herrign PCAs
+
+```{r}
+herring.pcas.try <-
+  map(red_herring,
+      ~safe_opls(select(., -group)))
+
+herring.pcas <-
+  herring.pcas.try %>% 
+  map("result") %>% 
+  discard(is.null)
+```
+
+Any errors?
+
+```{r}
+length(herring.pcas.try) - length(herring.pcas)
+```
+
+Zero errors
+
+### Red Herring PLS-DAs
+
+```{r}
+herring.pls.try <-
+  map(red_herring,
+      ~ safe_opls(select(., -group), .$group))
+
+herring.pls <-
+  herring.pls.try %>% 
+  map("result") %>% 
+  discard(is.null)
+```
+
+Any errors?
+
+```{r}
+length(herring.pls.try) - length(herring.pls)
+```
+
+Zero errors
+
+
+# Get Summary Stats
+## Map R2 and Q2 extractor
+
+**Control**
+
+```{r}
+control.pls %>%
+  map(~get_modelinfo(.)) %>%
+  map_dfr(~list(Q2 = pluck(., 2, "Q2(cum)"),
+                R2 = pluck(., 2, "R2Y(cum)")),
+          .id = "dataset") %>% 
+  summarize_if(is.numeric, funs(mean, sd))
+```
+
+**Null**
+
+```{r}
+null.pls %>%
+  map(~get_modelinfo(.)) %>%
+  map_dfr(~list(Q2 = pluck(., 2, "Q2(cum)"),
+                R2 = pluck(., 2, "R2Y(cum)")),
+          .id = "dataset") %>% 
+  summarize_if(is.numeric, funs(mean, sd))
+```
+
+**Needle-in-a-haystack**
+
+```{r}
+needle.pls %>%
+  map(~get_modelinfo(.)) %>%
+  map_dfr(~list(Q2 = pluck(., 2, "Q2(cum)"),
+                R2 = pluck(., 2, "R2Y(cum)")),
+          .id = "dataset") %>% 
+  summarize_if(is.numeric, funs(mean, sd))
+```
+
+**Red Herring**
+
+```{r}
+herring.pls %>%
+  map(~get_modelinfo(.)) %>%
+  map_dfr(~list(Q2 = pluck(., 2, "Q2(cum)"),
+                R2 = pluck(., 2, "R2Y(cum)")),
+          .id = "dataset") %>% 
+  summarize_if(is.numeric, funs(mean, sd))
+```
+
+
+
+
+
+
 
 # Kappa Coeficient
 
 For the control and needle scenarios, calculate kappa coefficient on confusion matrices built on ability to identify discriminating variables.
-
-
-
-
-
-
-
-
-
 ## Control
-
-## Calculate Cohen's Kappa
+### Calculate Cohen's Kappa
 
 - For PCA, I'm defining an "important" variable as one with a correlation to PC1 > 0.5 or  < -0.5
 - For PLS, an "important" variable is one with a VIP score > 1
@@ -393,61 +502,8 @@ I want to get $R^2$ and $Q^2_y$ with standard deviations for all scenarios.
 I already did control and needle. That leaves null and red herring.
 
 
-```{r}
-herring.pls.try <-
-  map(red_herring,
-      ~ safe_opls(select(., -group), .$group))
-herring.pls.failed <- map_lgl(herring.pls.try, is.null)
-herring.pls <- herring.pls.try[!herring.pls.failed]
-# sample(herring.pls, 1)
 
-length(herring.pls.try) - length(herring.pls)
-```
 zero models failed
 
-## Map R2 and Q2 extractor
 
-**Control**
-
-```{r}
-control.pls %>%
-  map(~get_modelinfo(.)) %>%
-  map_dfr(~list(Q2 = pluck(., 2, "Q2(cum)"),
-                R2 = pluck(., 2, "R2Y(cum)")),
-          .id = "dataset") %>% 
-  summarize_if(is.numeric, funs(mean, sd))
-```
-
-**Null**
-
-```{r}
-null.pls %>%
-  map(~get_modelinfo(.)) %>%
-  map_dfr(~list(Q2 = pluck(., 2, "Q2(cum)"),
-                R2 = pluck(., 2, "R2Y(cum)")),
-          .id = "dataset") %>% 
-  summarize_if(is.numeric, funs(mean, sd))
-```
-
-**Needle-in-a-haystack**
-
-```{r}
-needle.pls %>%
-  map(~get_modelinfo(.)) %>%
-  map_dfr(~list(Q2 = pluck(., 2, "Q2(cum)"),
-                R2 = pluck(., 2, "R2Y(cum)")),
-          .id = "dataset") %>% 
-  summarize_if(is.numeric, funs(mean, sd))
-```
-
-**Red Herring**
-
-```{r}
-herring.pls %>%
-  map(~get_modelinfo(.)) %>%
-  map_dfr(~list(Q2 = pluck(., 2, "Q2(cum)"),
-                R2 = pluck(., 2, "R2Y(cum)")),
-          .id = "dataset") %>% 
-  summarize_if(is.numeric, funs(mean, sd))
-```
 
